d-feet (0.3.12-2) UNRELEASED; urgency=medium

  * Set Priority to optional
  * Standards-Version: 4.1.1 (no further changes)
  * Set Rules-Requires-Root to no

 -- Simon McVittie <smcv@debian.org>  Sat, 04 Nov 2017 14:37:11 +0000

d-feet (0.3.12-1) unstable; urgency=medium

  * New upstream release
  * debian/patches/: Instead of patching minor formatting errors, ignore
    the result of the PEP8 check. (Closes: #866556)
  * d/p/ExecuteMethodDialog-Pretty-print-multiple-results.patch:
    Add patch to display multiple results from one method call correctly
    (upstream bug GNOME#784387)
  * d/p/Show-values-that-have-a-logical-False-representation.patch:
    Add patch from upstream Bugzilla to display zero/empty/false
    property values (upstream bug GNOME#783006)
  * Standards-Version: 4.0.0 (no further changes)
  * Upgrade to debhelper 10 compatibility level
    - Do not explicitly run dh-autoreconf, it is now the default
  * Add myself to Uploaders

 -- Simon McVittie <smcv@debian.org>  Sat, 08 Jul 2017 21:27:29 +0100

d-feet (0.3.11-3) unstable; urgency=medium

  * Fix PEP8 305 style error. (Closes: #844533)

 -- Michael Biebl <biebl@debian.org>  Thu, 01 Dec 2016 18:33:50 +0100

d-feet (0.3.11-2) unstable; urgency=medium

  * Switch to python3
  * debian/patches/fix_tests_python3.patch: Run the tests with python3
  * debian/control: Drop direct dependency to hicolor-icon-theme
  * debian/rules: Enable verbose tests

 -- Laurent Bigonville <bigon@debian.org>  Tue, 28 Jun 2016 13:48:29 +0200

d-feet (0.3.11-1) unstable; urgency=medium

  * New upstream release.
  * Drop patches which have been applied upstream:
    - debian/patches/Don-t-use-Wnck-to-get-app-icons-under-non-X11.patch
    - debian/patches/Ignore-pep8-E402-error.patch
  * Bump debhelper compatibility level to 9.
  * Convert from cdbs to dh.

 -- Michael Biebl <biebl@debian.org>  Wed, 27 Apr 2016 01:37:40 +0200

d-feet (0.3.10-2) unstable; urgency=medium

  * Team upload