@@ -3,6 +3,7 @@ d-feet (0.3.12-2) UNRELEASED; urgency=medium
   * Set Priority to optional
   * Standards-Version: 4.1.1 (no further changes)
   * Set Rules-Requires-Root to no
+  * Mark patches with their forwarding status
 
  -- Simon McVittie <smcv@debian.org>  Sat, 04 Nov 2017 14:37:11 +0000
 
